// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Subtitle Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="container color-base"
  >
    Consent doubt Tuckborough challenge destroying.
  </h4>
  <h4
    className="container color-primary"
  >
    Consent doubt Tuckborough challenge destroying.
  </h4>
  <h4
    className="container color-muted"
  >
    Consent doubt Tuckborough challenge destroying.
  </h4>
</div>
`;

exports[`Storyshots Atoms/Subtitle Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h4
    className="container color-base"
  >
    Consent doubt Tuckborough challenge destroying.
  </h4>
</div>
`;

exports[`Storyshots Atoms/Subtitle Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <h5
    className="container color-base"
  >
    Consent doubt Tuckborough challenge destroying.
  </h5>
  <h4
    className="container color-base"
  >
    Consent doubt Tuckborough challenge destroying.
  </h4>
  <h3
    className="container color-base"
  >
    Consent doubt Tuckborough challenge destroying.
  </h3>
</div>
`;
